# notas-musicais

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: pipeline.yaml
docs/: 01_tutorial.md  02_contribua.md  index.md
docs/stylesheets/: extra.css
docs/templates/: cards.html  instalacao.md
notas_musicais/: acordes.py  campo_harmonico.py  escalas.py
tests/: test_acordes.py  test_escalas.py
